# askEmma-take-home-assessment

./: README.md  the_task.md
backend/: main.py  pyproject.toml
backend/app/api/v1/: health.py  processor.py
backend/app/db/: db.py
backend/app/schemas/: __init__.py  email.py  incident.py  policy.py
backend/app/utils/: file_processing.py  tools.py
backend/ingestion/: README.md  ingestion.py  vector_search.py
backend/ingestion/polices/: p4.txt  p6.txt  p7.txt
backend/ingestion/policies/: p1.txt  p2.txt  p3.txt  p5.txt
frontend/: index.html  openapi-ts.config.ts  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/client/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: EmailsDisplay.tsx  FileUpload.tsx  IncidentReportDisplay.tsx  PoliciesDisplay.tsx  ReasoningDisplay.tsx
