[project]
name = "askemma-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.0",
    "openai>=2.15.0",
    "openai-agents>=0.6.7",
    "pydantic>=2.12.5",
    "sqlalchemy[asyncio]>=2.0.45",
    "sqlite-vec>=0.1.6",
]
